WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
74058
[Qt] [WK2] Directly composited images don't render
https://bugs.webkit.org/show_bug.cgi?id=74058
Summary
[Qt] [WK2] Directly composited images don't render
Viatcheslav Ostapenko
Reported
2011-12-07 23:11:06 PST
Load LayoutTests/compositing/direct-image-compositing.html in MiniBrowser. All images that should be directly composited are not visible.
Attachments
Patch
(3.30 KB, patch)
2011-12-07 23:26 PST
,
Viatcheslav Ostapenko
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Viatcheslav Ostapenko
Comment 1
2011-12-07 23:25:01 PST
Images do not attach to WebGraphicsLayer because graphics layer not yet attached to parent and layerTreeTileClient is 0.
Viatcheslav Ostapenko
Comment 2
2011-12-07 23:26:37 PST
Created
attachment 118337
[details]
Patch
Simon Hausmann
Comment 3
2011-12-08 00:43:42 PST
Looks good to me, but I'll let Noam do the review. Perhaps there's a way to avoid putting the extra logic into syncCompositingStateForThisLayerOnly?
Noam Rosenthal
Comment 4
2011-12-08 07:34:19 PST
(In reply to
comment #3
)
> Looks good to me, but I'll let Noam do the review. Perhaps there's a way to avoid putting the extra logic into syncCompositingStateForThisLayerOnly?
syncCompositingStateForThisLayerOnly is where the per-layer synchronization should occur; I'm good with adding that logic there.
WebKit Review Bot
Comment 5
2011-12-08 08:17:10 PST
Comment on
attachment 118337
[details]
Patch Clearing flags on attachment: 118337 Committed
r102342
: <
http://trac.webkit.org/changeset/102342
>
WebKit Review Bot
Comment 6
2011-12-08 08:17:15 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug