[Qt] [WK2] Directly composited images doesn't render https://bugs.webkit.org/show_bug.cgi?id=74058

Patch by Viatcheslav Ostapenko <ostapenko.viatcheslav@nokia.com> on 2011-12-08
Reviewed by Noam Rosenthal.

Attach image to WebGraphicsLayer even if layerTreeTileClient is not set
and create/assign remote image tiles later during sync.

* WebProcess/WebCoreSupport/WebGraphicsLayer.cpp:
(WebCore::WebGraphicsLayer::setContentsNeedsDisplay):
(WebCore::WebGraphicsLayer::setContentsToImage):
(WebCore::WebGraphicsLayer::syncCompositingStateForThisLayerOnly):

Canonical link: https://commits.webkit.org/90757@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102342 268f45cc-cd09-0410-ab3c-d52691b4dbfc